更新 Java 編譯器版本至 11，提升相容性與性能